tests/spec/fail/generic_chan_wrong_arity.aja
fuc bad(ch: chan[int, int]) -> void:
    return
